--- a/KnockOut/KnockOut.csproj
+++ b/KnockOut/KnockOut.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Script\script.sql" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
