--- a/KnockOutDemo/Web.config
+++ b/KnockOutDemo/Web.config
@@ -41,8 +41,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <!--<add name="TrialDBEntities" connectionString="metadata=res://*/Models.MyEntity.csdl|res://*/Models.MyEntity.ssdl|res://*/Models.MyEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SIBEESHVENU\SQLEXPRESS;initial catalog=TrialDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="TrialDBEntities" connectionString="metadata=res://*/Models.MyEntity.csdl|res://*/Models.MyEntity.ssdl|res://*/Models.MyEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VE-200517_A\SQLEXPRESS;initial catalog=TrialDB;user id=sa;password=pass@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TrialDBEntities" connectionString="metadata=res://*/Models.MyEntity.csdl|res://*/Models.MyEntity.ssdl|res://*/Models.MyEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VE-200517_A\SQLEXPRESS;initial catalog=TrialDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="TrialDBEntities" connectionString="metadata=res://*/Models.MyEntity.csdl|res://*/Models.MyEntity.ssdl|res://*/Models.MyEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VE-200517_A\SQLEXPRESS;initial catalog=TrialDB;user id=sa;password=pass@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
